--- a/Newwww/photo.html
+++ b/Newwww/photo.html
@@ -23,7 +23,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
  <div class="container-fluid"><img src="images/logo.png" alt="" width="" height="24" class="d-inline-block align-text-top">
-    <a class="navbar-brand mb-0 h1" href="#">TING's</a>
+    <a class="navbar-brand mb-0 h1" href="index.html">TING's</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -50,49 +50,6 @@
     </div>
   </div>
 </nav>
-
-
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/pic01.jpg" class="d-block w-100" alt="1">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Chiayi</h5>
-        <p>Taiwan</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images/pic02.jpg" class="d-block w-100" alt="2">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Osaka</h5>
-        <p>Japan</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images/pic03.jpg" class="d-block w-100" alt="3">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Taipei</h5>
-        <p>Taiwan</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
- 
- 
-  
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
@@ -136,99 +93,43 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
-      <img src="images/design02.jpg" class="card-img-top" alt="1">
+      <img src="images/08.jpg" class="card-img-top" alt="1">
       <div class="card-body">
-        <h5 class="card-title">Poster</h5>
-        <p class="card-text">2021新竹燈會</p>
+        <h5 class="card-title">Tokyo-淺草寺</h5>
+        <p class="card-text">2020冬-fuji業務用100</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 1 months ago</small>
+        <small class="text-muted">Last updated 30 days ago</small>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="images/design03.jpg" class="card-img-top" alt="2">
+      <img src="images/09.jpg" class="card-img-top" alt="2">
       <div class="card-body">
-        <h5 class="card-title">Ｍagazine Design</h5>
-        <p class="card-text">practice</p>
+        <h5 class="card-title">Tokyo-淺草寺</h5>
+        <p class="card-text">2020冬-fuji業務用100</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 2 months ago</small>
+        <small class="text-muted">Last updated 30 days ago</small>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="images/design03.png" class="card-img-top" alt="3">
+      <img src="images/10.jpg" class="card-img-top" alt="3">
       <div class="card-body">
-        <h5 class="card-title">Package</h5>
-        <p class="card-text">桃特手工皂</p>
+        <h5 class="card-title">Tokyo-富士山</h5>
+        <p class="card-text">2020冬-fujifilmpro400</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 3 months ago</small>
+        <small class="text-muted">Last updated 30 days ago</small>
       </div>
     </div>
   </div>
 </div>
 
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card h-100">
-      <img src="images/design04.jpg" class="card-img-top" alt="1">
-      <div class="card-body">
-        <h5 class="card-title">Girafood</h5>
-        <p class="card-text">App UI/UX</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 4 months ago</small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="images/design05.jpg" class="card-img-top" alt="2">
-      <div class="card-body">
-        <h5 class="card-title">Rebranding</h5>
-        <p class="card-text">小北百貨品牌再造計畫</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 5 months ago</small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="images/design06.jpg" class="card-img-top" alt="3">
-      <div class="card-body">
-        <h5 class="card-title">Rebranding</h5>
-        <p class="card-text">小北百貨品牌再造計畫</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 5 months ago</small>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-   
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">您的信箱</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">內容...</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>   
-    
-
-
-   
 <a style="display:scroll;position:fixed;bottom:20px;right:-430px;" href="#" title="" onFocus="if(this.blur)this.blur()">
 <img alt='' border='0' onmouseover="this.src=images/100.png" src="images/100.png" onmouseout="this.src=images/100.png" class="img-circle" style="width:10%"/></a>
  
@@ -247,7 +148,13 @@
     </div>
   </div>
 </div>
- 
+
+
+
+
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>      
 
 </body>
