--- a/pack.html
+++ b/pack.html
@@ -66,7 +66,7 @@
     <div class="card">
       <img src="images/design03.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">桃特手工皂包裝e</h5>
+        <h5 class="card-title">桃特手工皂包裝</h5>
         <p class="card-text">2020</p>
       </div>
     </div>
