--- a/index2.html
+++ b/index2.html
@@ -89,6 +89,49 @@
   </div>
 </div>
 
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="images/gift.gif" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">GIF-01</h5>
+        <p class="card-text">GIF-01</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="images/open box black2.gif" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">GIF-02</h5>
+        <p class="card-text">GIF-02</p>
+      </div>
+    </div>
+  </div>
+
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="images/car booboo.gif" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">GIF-03</h5>
+        <p class="card-text">GIF-03</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="images/go.gif" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">GIF-04</h5>
+        <p class="card-text">GIF-04</p>
+      </div>
+    </div>
+  </div>
+
+
+
+
 
 <a style="display:scroll;position:fixed;bottom:20px;right:-430px;" href="#" title="" onFocus="if(this.blur)this.blur()">
 <img alt='' border='0' onmouseover="this.src=images/100.png" src="images/100.png" onmouseout="this.src=images/100.png" class="img-circle" style="width:10%"/></a>
